--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     </section>
     <main id="main">
       <section>
+        <!-- The paragraphs of FORGEROCK & PINGFEDERATE, SAILPOINT & SAVIYNT and BEYONDTRUST & CYBERARK are taken from their respective organizational webpages-->
         <div class="container" data-aos="fade-up">
           
   
